--- a/去乐园/html/me.html
+++ b/去乐园/html/me.html
@@ -1,14 +1,19 @@
-<div id="main4">
-	<div class="main4_top">
-		<div class="main4_head"></div>
-		<div class="main4_ma"><p class="iconfont"> &#xe604;</p><p class="iconfont">&#xe605;</p></div>
+<div id="mewrap">
+	<div id="meHead">
+		<div id='headbg'></div>
+		<div id='headpic'>
+			<img src="../img/1.jpg">
+			<div id="erweima">
+				<span class="iconfont">&#xe61b;</span>&nbsp;&nbsp;<span class="iconfont">&#xe612;</span>
+			</div>
+		</div>
 	</div>
-	<div class="main4_center">
-		<li class="main4_li"><a href="###"><p>我是代言人</p><p class="iconfont">&#xe605;</p></a></li>
-		<li class="main4_li"><a href="###"><p>我的订单</p><p class="iconfont">&#xe605;</p></a></li>
-		<li class="main4_li"><a href="###"><p>我的优惠劵</p><p class="iconfont">&#xe605;</p></a></li>
-		<li class="main4_li"><a href="###"><p>我的账户</p><p class="iconfont">&#xe605;</p></a></li>
-		<li class="main4_li"><a href="###"><p>玩乐商城</p><p class="iconfont">&#xe605;</p></a></li>
-		<li class="main4_li"><a href="###"><p>我要吐槽</p><p class="iconfont">&#xe605;</p></a></li>
-	</div>
+	<ul class="list3">
+		<li>我是代言人<span class="iconfont">&#xe612;</span></li>
+		<li>我的订单<span class="iconfont">&#xe612;</span></li>
+		<li>我的优惠券<span class="iconfont">&#xe612;</span></li>
+		<li>我的账户<span class="iconfont">&#xe612;</span></li>
+		<li>玩乐商城<span class="iconfont">&#xe612;</span></li>
+		<li>我要吐槽<span class="iconfont">&#xe612;</span></li>
+	</ul>
 </div>
