--- a/去乐园/html/paradise.html
+++ b/去乐园/html/paradise.html
@@ -6,5 +6,5 @@
 			<div class="lowernav col-xs-4 col-md-4"><a href="###">排序</a></div>
 		</div>
 	</div>
-	<ul class="list"></ul>
+	<ul class="list2"></ul>
 </div>
